<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameOverActivity">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="342dp"
        android:layout_height="71dp"
        android:text="@string/end"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/btn_again"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_title"
        app:layout_constraintVertical_bias="0.425" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="125dp"
        android:layout_height="45dp"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_again"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text=""
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="#F8F4F3"
        app:layout_constraintBottom_toTopOf="@+id/btn_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_title" />

</androidx.constraintlayout.widget.ConstraintLayout>