<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NewScoreActivity">

    <TextView
        android:id="@+id/newScoreView"
        android:layout_width="500dp"
        android:layout_height="70dp"
        android:text="@string/new_high_score"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FF5722"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/score_label"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:text=""
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="#F8F4F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newScoreView"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:ems="10"
        android:textColorHint="#F8F4F3"
        android:hint="@string/your_name"
        android:inputType="textCapSentences"
        android:text=""
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="#F8F4F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/score_label"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newScoreView"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newScoreView"
        app:layout_constraintVertical_bias="0.604" />
</androidx.constraintlayout.widget.ConstraintLayout>

